Fix typo and change some depracated URL to your profile URL

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 			<div class="background-inner">
 				<div class="profile-img"></div>
 				<div class="description">
-					Hello there, im <span>AinulBedjo</span>.
+					Hello there, I'm <span>AinulBedjo</span>.
 					<br>
-					Im a <span class="type2">node.js</span> developer from <span class="type3">Surabaya</span>.
+					I'm a <span class="type2">node.js</span> developer from <span class="type3">Surabaya</span>.
 				</div>
 
 				<!-- Contact Me -->
@@ -43,12 +43,12 @@
 						</a>
 					</div>
 					<div>
-						<a href="https://www.linkedin.com/in/ainul-bedjo-a14b26142/">
+						<a href="https://www.linkedin.com/in/ai-null">
 							<i class="fa fa-linkedin"></i>
 						</a>
 					</div>
 					<div>
-						<a href="https://www.github.com/MAinulYaqin">
+						<a href="https://www.github.com/ai-null">
 							<i class="fa fa-github"></i>
 						</a>
 					</div>
@@ -65,7 +65,7 @@
 					Who Am I
 				</div>
 				<div class="description">
-					My name is Ainul, I am a node.js developer from Surabaya, Indonesia. I love technology, especially on programming language. I learn to write a code with javascript and focused to building website or desktop app using it. Currently i am learning about some stuff called React Native (also javascript) to build mobile apps for android, maybe i will learn more about this one to build for Ios too.
+					My name is Ainul, I am a node.js developer from Surabaya, Indonesia. I love technology, especially on programming language. I learn how to write a code with javascript and focus into building website or desktop app using it. Currently I am learning about some stuff called React Native (also javascript) to build mobile apps for android, maybe I will learn more about this one to build for iOS too.
 				</div>
 			</div>
 		</div>
@@ -78,20 +78,20 @@
 				
 				<!-- Project section -->
 				<div class="center title-section">
-					<h1>A lot of my work</h1>
+					<h1>Lot of my work</h1>
 				</div>
 				<div class="project">
 					<ul>
 						<li class="center">
 							<div class="container">
 								<div class="title"><a href="https://github.com/MAinulYaqin/recommerce">Re-Commerce</a></div>
-								<div class="description">E-Commerce web app using React and mongoDB (MEARN Stack).</div>
+								<div class="description">E-Commerce web app using React and mongoDB (MERN Stack).</div>
 							</div>
 						</li>
 						<li class="center">
 							<div class="container">
 								<div class="title"><a href="https://github.com/MAinulYaqin/video-player">Komo</a></div>
-								<div class="description">Desktop video player like vlc using React and Electron.js.</div>
+								<div class="description">Desktop video player like VLC using React and Electron.js.</div>
 							</div>
 						</li>
 						<li class="center">
