--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" type="text/css" href="assets/vendor/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
+	<button><a href="http://app.example.com">DEEPLINK</a></button>
+	
 	<div class="main-wrapper">
 		<!-- header section -->
 		<div class="header">
