--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 	<link rel="stylesheet" type="text/css" href="assets/vendor/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
-	<button><a href="http://app.example.com">DEEPLINK</a></button>
-	
 	<div class="main-wrapper">
 		<!-- header section -->
 		<div class="header">
@@ -27,7 +25,7 @@
 			<div class="background-inner">
 				<div class="profile-img"></div>
 				<div class="description">
-					Hello there, I'm <span>AinulBedjo</span>.
+					Hello there, I'm <span><a href="http://app.example.com">DEEPLINK</a>Ainul Yaqin</span>.
 					<br>
 					I'm a <span class="type2">node.js</span> developer from <span class="type3">Surabaya</span>.
 				</div>
